--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-  <link rel="stylesheet" href="./dist/style.css">
-  <script src="./dist/time-time-workshop.iife.js"></script>
-</head>
-<body data-tic="5">
-<div class="wrapper">
-
-</div>
-<script>
-  const {Tic} = timeTimeWorkshop;
-  t = new Tic
-  t.start()
-</script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Title</title>
+    <link rel="stylesheet" href="./dist/style.css" />
+    <script src="./dist/time-time-workshop.iife.js"></script>
+  </head>
+  <body data-tic="4">
+    <div class="wrapper"></div>
+    <script>
+      const { Tic } = timeTimeWorkshop;
+      t = new Tic();
+      t.start();
+    </script>
+  </body>
 </html>
